--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet"> 
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <title>Memory Card Game</title>
   </head>
@@ -15,10 +17,10 @@
        and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
     </p>
     <div>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+      <img src="images/back.png" alt="Queen of Diamonds">
+      <img src="images/back.png" alt="Queen of Hearts">
+      <img src="images/back.png" alt="King of Diamonds">
+      <img src="images/back.png" alt="King of Hearts">
     </div>
         
   </body>
