--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -27,6 +27,14 @@
           <img src="images/back.png" alt="King of Diamonds">
           <img src="images/back.png" alt="King of Hearts">
         </div>
-    </main>     
+    </main>    
+    <footer class="clearfix">
+      <p class="copyright">
+        Copyright 2017
+      </p>
+      <p class="message">
+          Created with &hearts; by <span class="name">GA</span>
+      </p>
+    </footer> 
   </body>
 </html>
